tests/NormalTests/paczka1/fuzzy1/35983480.err
Error in line 1: BQuR5D A639 72,3
Error in line 6: Jw6PJCqDo S117 93,2
Error in line 17: khx9sdCQDvT A639 80,4
Error in line 19: Q68 A639 7,3
Error in line 27: BQuR5D S256 105,1
Error in line 28: BQuR5D S117 96,7
Error in line 31: BQuR5D S256 24,6
Error in line 38: FBAzsqTCsT A639 6,9
